; ModuleID = '/home/carl/AnghaBench/zstd/lib/decompress/extr_huf_decompress.c_HUF_decompress1X1.c'
source_filename = "/home/carl/AnghaBench/zstd/lib/decompress/extr_huf_decompress.c_HUF_decompress1X1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DTable = common dso_local global i32 0, align 4
@HUF_TABLELOG_MAX = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @HUF_decompress1X1(i8* %0, i64 %1, i8* %2, i64 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  store i8* %0, i8** %5, align 8
  store i64 %1, i64* %6, align 8
  store i8* %2, i8** %7, align 8
  store i64 %3, i64* %8, align 8
  %9 = load i32, i32* @DTable, align 4
  %10 = load i32, i32* @HUF_TABLELOG_MAX, align 4
  %11 = call i32 @HUF_CREATE_STATIC_DTABLEX1(i32 %9, i32 %10)
  %12 = load i32, i32* @DTable, align 4
  %13 = load i8*, i8** %5, align 8
  %14 = load i64, i64* %6, align 8
  %15 = load i8*, i8** %7, align 8
  %16 = load i64, i64* %8, align 8
  %17 = call i64 @HUF_decompress1X1_DCtx(i32 %12, i8* %13, i64 %14, i8* %15, i64 %16)
  ret i64 %17
}

declare dso_local i32 @HUF_CREATE_STATIC_DTABLEX1(i32, i32) #1

declare dso_local i64 @HUF_decompress1X1_DCtx(i32, i8*, i64, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
